cambie las novedades por mejores escenas (index.html)

--- a/index.html
+++ b/index.html
@@ -118,31 +118,43 @@
           </p>
         </div>
         <div>
-          <h2>Novedades</h2>
+          <h2>Mejores Escenas</h2>
           <br />
           <p>
             <a
-              href="https://es.wikipedia.org/wiki/Ahsoka_(serie_de_televisi%C3%B3n)"
+              href="https://www.youtube.com/watch?v=M4rXcrj9k5A"
               target="_blank"
-              >'Ahsoka' - Serie 'Skeleton Crew'- Serie</a
+              >Obi-Wan & Anakin vs Conde Dooku</a
             >
             <br />
             <a
-              href="https://es.wikipedia.org/wiki/Star_Wars:_Skeleton_Crew"
+              href="https://www.youtube.com/watch?v=l00vqfWJho0"
               target="_blank"
-              >'Skeleton Crew' - Serie
+              >Discurso del General Hux
             </a>
             <br />
             <a
-              href="https://www.fotogramas.es/noticias-cine/a38280249/star-wars-proximos-estrenos-peliculas-series/"
+              href="https://www.youtube.com/watch?v=8lh8H3RswYM"
               target="_blank"
-              >'Los rescoldos del Imperio' - Película</a
+              >Ejecute la orden 66</a
             >
             <br />
             <a
-              href="https://www.fotogramas.es/noticias-cine/a38280249/star-wars-proximos-estrenos-peliculas-series/"
+              href="https://www.youtube.com/watch?v=wgyv1uZCTQA"
               target="_blank"
-              >'Los primeros Jedi' - Película</a
+              >'Qui-Gon Jinn & Obi-Wan Kenobi vs Darth Maul</a
+            >
+            <br />
+            <a
+              href="https://www.youtube.com/watch?v=o_WHe6VPaNw"
+              target="_blank"
+              >Yo soy tu padre...</a
+            >
+            <br />
+            <a
+              href="https://www.youtube.com/watch?v=RwUQH7SgkEc"
+              target="_blank"
+              >Luke Skywalker vs Darth Vader</a
             >
           </p>
         </div>
